old post fixes and ascii art section fixes

--- a/_includes/asciiart_head.html
+++ b/_includes/asciiart_head.html
@@ -23,6 +23,11 @@
 	.content {
 		text-align: center;
 	}
+
+	.title_image.ascii_image {
+		position: relative;
+		top: -15px;
+	}
 	.page-content {
 	}
 	.wrapper {
@@ -90,7 +95,7 @@
 	.deco_right {
 		float: right;
 		position: relative;
-		top: -75px;
+		top: -100px;
 	}
 
 	.bottom_deco.deco_left {
@@ -129,6 +134,15 @@
 		.wrapper {
 			width: 75%;
 		}
+		.title_image.ascii_image {
+			width: 150px;
+			left: -20px;
+		}
+		.deco_right {
+			top: -80px;
+		}
+
+
 	}
 
 	@media(max-width: 600px) {
