--- a/_includes/header_asciiart.html
+++ b/_includes/header_asciiart.html
@@ -13,17 +13,9 @@
 		</div>
 			<div id="section_title">
 				<span id="section_title_content">
-▄▄▄&nbsp;▄▀▀▄▀▀▀▀█▀▀▄▄▄▄&nbsp;▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;<br/>
-█&nbsp;▄&nbsp;▀&nbsp;█&nbsp;▄▀▀&nbsp;▐&nbsp;█▄&nbsp;&nbsp;▄&nbsp;▀&nbsp;▄&nbsp;█&nbsp;&nbsp;&nbsp;<br/>
-█&nbsp;▌&nbsp;&nbsp;█&nbsp;█▄▐▀▄▐&nbsp;█▄▀▄▐▀▄▀▐&nbsp;█&nbsp;&nbsp;&nbsp;<br/>
-▓&nbsp;▌&nbsp;█&nbsp;▀▄▄▐&nbsp;&nbsp;▀&nbsp;▀&nbsp;&nbsp;▐▐&nbsp;&nbsp;&nbsp;▐&nbsp;▓&nbsp;&nbsp;&nbsp;<br/>
-▒&nbsp;&nbsp;█&nbsp;░░&nbsp;&nbsp;&nbsp;░░░&nbsp;&nbsp;&nbsp;░&nbsp;&nbsp;&nbsp;░░▐&nbsp;▒&nbsp;&nbsp;&nbsp;<br/>
+				<img class="ascii_image title_image" src="{{site.baseurl}}/assets/ascii/as0.png" alt=header  />
 				</span>
 			</div>
-		<div class='left'>
-ScreenShots &amp;<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Ascii-Arts
-		</div>
 		<div class="header_line_deco deco_right">
 ░░░░<br/>
 ░░░░<br/>
