--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,8 @@
 				<li><a href="{{site.baseurl}}/arts.html" >Arts</a></li>
 				<li><a href="{{site.baseurl}}/food.html" >Cooking</a></li>
 				<li><a href="{{site.baseurl}}/asciiart.html" >Screenshots &amp; Ascii-Art</a></li>
-				<li><a href="{{site.baseurl}}/poems.html" >Poems</a></li>
+				<li><a href="{{site.baseurl}}/others.html" >Poems</a></li>
 				<li><a href="{{site.baseurl}}/quotes.html" >Quotes</a></li>
-				<li><a href="{{site.baseurl}}/Links.html" >Links</a></li>
 			</ul>
 			<hr/>
 			<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
