--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -65,3 +65,5 @@
 {% include recipe_template.html name="Burritos" img="34" description="This is a dish I made with my SO. It was fun to make and fun to eat. Very enjoyable savor." %}
 
 {% include recipe_template.html name="Spaghetti Extra Special Sauce" img="35" description="A custom sauce made with some help from my SO. A sweet mix." %}
+
+{% include recipe_template.html name="Spaghetti Special Red Sauce" img="36" description="Another custom sauce made with some help from my SO. Yet another sweet mix." %}
