--- a/_includes/about_contact.html
+++ b/_includes/about_contact.html
@@ -10,7 +10,7 @@
 	<span class="contact">irc.nixers.net</span> or <span class="contact">irc.iotek.org</span> or <span class="contact">unix.chat</span> <span class="contact colored">#nixers</span>
 </div>
 <div>
-	<span class="contact">Mumble</span>: <span class="contact colored">chat.z3bra.org:64738</span> Every Sunday 7-8pm UTC+3
+	<span class="contact">Mumble</span>: <span class="contact colored">talk.nixers.net:64738</span> <a href=http://nixers.net/showthread.php?tid=1656>Check the podcast schedule</a>
 </div>
 <div class="email">
 	<span class="contact">Telegram</span>: <a href="tg://resolve?domain=venam">@venam</a>
