--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -67,3 +67,7 @@
 {% include recipe_template.html name="Spaghetti Extra Special Sauce" img="35" description="A custom sauce made with some help from my SO. A sweet mix." %}
 
 {% include recipe_template.html name="Spaghetti Special Red Sauce" img="36" description="Another custom sauce made with some help from my SO. Yet another sweet mix." %}
+
+{% include recipe_template.html name="Father's Homemade Peanut Butter Cake" img="37" description="My father made his own peanut butter and a fluffy cake with it." %}
+
+{% include recipe_template.html name="Father's Homemade Peanut Butter Cake" img="38" description="Another picture of the peanut butter cake" %}
