--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -71,3 +71,5 @@
 {% include recipe_template.html name="Father's Homemade Peanut Butter Cake" img="37" description="My father made his own peanut butter and a fluffy cake with it." %}
 
 {% include recipe_template.html name="Father's Homemade Peanut Butter Cake" img="38" description="Another picture of the peanut butter cake" %}
+
+{% include recipe_template.html name="My Girlfriend's Homemade Cheesecake" img="39" description="A delicious cheesecake made with love." %}
