--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,21 @@ layout: default
 
   <header>
     <h1 class="title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    {% if page.audio %}
+    <p class="post-meta" style="margin:0px;">
+    (<a
+        onclick="document.getElementById('audio_hidden').style.display='block';"
+        href="#">PLAY A.3XP
+    </a>)
+    </p>
+    <div style="text-align:center;width: 300px;margin: 0 auto;">
+		<iframe id="audio_hidden" style="display:none;" height="100" scrolling="no"
+			frameborder="no"
+			src="https://w.soundcloud.com/player/?url=https%3A//{{ page.audio }}&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+		</iframe>
+    </div>
+    {% endif %}
+    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}</p>
   </header>
 
   <article>
