lots of changes, new art, new recipe, the 4-3XP, layout

--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -73,3 +73,7 @@
 {% include recipe_template.html name="Father's Homemade Peanut Butter Cake" img="38" description="Another picture of the peanut butter cake" %}
 
 {% include recipe_template.html name="My Girlfriend's Homemade Cheesecake" img="39" description="A delicious cheesecake made with love." %}
+
+{% include recipe_template.html name="Vine Leaves" img="40" description="Delicious vine leaves made with the ones from my garden." %}
+
+{% include recipe_template.html name="My girlfriend's homemade bread" img="41" description="Amazing bread and Zaatar made by my SO." %}
