let's add this here'

--- a/_includes/about_profiles.html
+++ b/_includes/about_profiles.html
@@ -49,5 +49,10 @@
 		MENA Devs Network
 	</a>
 </div>
+<div class="email">
+	<a href="http://soundcloud.com/4-3xp/">
+		SoundCloud
+	</a>
+</div>
 
 <hr/>
