--- a/_includes/about_profiles.html
+++ b/_includes/about_profiles.html
@@ -45,13 +45,18 @@
 	</a>
 </div>
 <div class="email">
-	<a href="http://communitydigest.io/">
+	<a href="http://mena-devs.com">
 		MENA Devs Network
 	</a>
 </div>
 <div class="email">
 	<a href="http://soundcloud.com/4-3xp/">
 		SoundCloud
+	</a>
+</div>
+<div class="email">
+	<a href="http://bbs.ninja/crew/impure!ascii.1940/">
+		Impure!Ascii
 	</a>
 </div>
 
