--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -77,3 +77,5 @@
 {% include recipe_template.html name="Vine Leaves" img="40" description="Delicious vine leaves made with the ones from my garden." %}
 
 {% include recipe_template.html name="My girlfriend's homemade bread" img="41" description="Amazing bread and Zaatar made by my SO." %}
+
+{% include recipe_template.html name="Special Recipe I" img="42" description="" %}
