--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -79,3 +79,5 @@
 {% include recipe_template.html name="My girlfriend's homemade bread" img="41" description="Amazing bread and Zaatar made by my SO." %}
 
 {% include recipe_template.html name="Special Recipe I" img="42" description="" %}
+
+{% include recipe_template.html name="Ratatouille" img="43" description="A spicy and fresh ratatouille" %}
