--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -81,3 +81,5 @@
 {% include recipe_template.html name="Special Recipe I" img="42" description="" %}
 
 {% include recipe_template.html name="Ratatouille" img="43" description="A spicy and fresh ratatouille" %}
+
+{% include recipe_template.html name="Vegetable Couscous" img="44" description="Couscous with some vegetables on top." %}
