--- a/_includes/others.html
+++ b/_includes/others.html
@@ -3,6 +3,9 @@
 </header>
 
 <div class="about_section">
+	<a class="clickable colored big" href="{{site.baseurl}}/scrot.html">Screenshots</a>
+</div>
+<div class="about_section">
 	<a class="clickable colored big" href="{{site.baseurl}}/arts.html">Arts</a>
 </div>
 <div class="about_section">
@@ -41,7 +44,7 @@
 	<a class="clickable colored big" href="{{site.baseurl}}/quotes.html" >Quotes</a>
 </div>
 <div class="about_section">
-	<a class="clickable colored big" href="{{site.baseurl}}/asciiart.html" >Screenshots &amp; Ascii-Arts</a>
+	<a class="clickable colored big" href="{{site.baseurl}}/asciiart.html" >Ascii-Arts</a>
 </div>
 
 
