--- a/_includes/header_scrot.html
+++ b/_includes/header_scrot.html
@@ -2,10 +2,10 @@
 <div class='header_scrot'>
 	<div class='header_venam'>venam's</div>
 	<object id="header_camera" class='svg_images' type="image/svg+xml" data="assets/camera.svg"></object>
-	<div class='header_logo'><span class="header_big">S</span>CROTS</div>
-	<div class='links'>
-		<a href=#>Blog</a>
-		<a href=#>Ascii</a>
-		<a href=#>Art</a>
+	<div class='header_logo'><span class="header_big">S</span><span class="header_small">CROTS</span></div>
+	<div class='header_links'>
+		<a href={{site.baseurl}}>Blog</a>
+		<a href={{site.baseurl}}/asciiart.html>Ascii</a>
+		<a href={{site.baseurl}}/arts.html>Art</a>
 	</div>
 </div>
