--- a/_layouts/scrot.html
+++ b/_layouts/scrot.html
@@ -28,11 +28,18 @@
 	-->
 	<div class="page-content">
 		<div class="wrapper">
-			<div class="content" id="blog-content">
 
+			<div class="content" id="blog-content">
+				{% include all_scrots.html %}
 			</div>
+
 		</div>
+
 	</div>
+	<div class='scrot_container links'>
+		<a href={{site.baseurl}}>Blog</a>
+	</div>
+
   </body>
 
 </html>
