--- a/_includes/others.html
+++ b/_includes/others.html
@@ -2,16 +2,16 @@
 	<h1 class="title">Others</h1>
 </header>
 
-<div class="about_section">
+<div class="about_section ce">
 	<a class="clickable colored big" href="{{site.baseurl}}/scrot.html">Screenshots</a>
 </div>
-<div class="about_section">
+<div class="about_section ce">
 	<a class="clickable colored big" href="{{site.baseurl}}/arts.html">Arts</a>
 </div>
-<div class="about_section">
+<div class="about_section ce">
 	<a class="big colored clickable" href="{{site.baseurl}}/food.html">Cooking</a>
 </div>
-<div class="about_section">
+<div class="about_section ce">
 	<span class="clickable colored big" onClick="showOther('poems')" href="">Poems</span>
 	<div id="other_poems"   class="hidden">
 		<ul>
@@ -40,10 +40,10 @@
 		</ul>
 	</div>
 </div>
-<div class="about_section">
+<div class="about_section ce">
 	<a class="clickable colored big" href="{{site.baseurl}}/quotes.html" >Quotes</a>
 </div>
-<div class="about_section">
+<div class="about_section ce">
 	<a class="clickable colored big" href="{{site.baseurl}}/asciiart.html" >Ascii-Arts</a>
 </div>
 
