audio for podcast

--- a/_includes/projects_presentations.html
+++ b/_includes/projects_presentations.html
@@ -1,6 +1,10 @@
 <h2>Presentations</h2>
 <hr/>
 <div class="email">
+	<a href="http://podcast.nixers.net/what">Nixers Podcast</a>
+	A podcast about Unix
+</div>
+<div class="email">
 	<a href="http://venam.nixers.net/presentation/">Internship</a>
 	A Summary of what I worked on for my Internship at <a href="http://invigo.com.lb">Invigo</a>
 </div>
