--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -83,3 +83,5 @@
 {% include recipe_template.html name="Ratatouille" img="43" description="A spicy and fresh ratatouille" %}
 
 {% include recipe_template.html name="Vegetable Couscous" img="44" description="Couscous with some vegetables on top." %}
+
+{% include recipe_template.html name="Timbele de venere [venus rice]" img="45" description="Black rice with vegetables slowly cooked in the oven with added peas for a soft taste. Probably one of my favorite recipe so far." %}
