new section with screenshots

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,8 @@
 			<ul class="foot_other">
 				<li><a href="{{site.baseurl}}/arts.html" >Arts</a></li>
 				<li><a href="{{site.baseurl}}/food.html" >Cooking</a></li>
-				<li><a href="{{site.baseurl}}/asciiart.html" >Screenshots &amp; Ascii-Art</a></li>
+				<li><a href="{{site.baseurl}}/asciiart.html" >Ascii Arts</a></li>
+				<li><a href="{{site.baseurl}}/scrot.html" >Screenshots</a></li>
 				<li><a href="{{site.baseurl}}/others.html" >Poems</a></li>
 				<li><a href="{{site.baseurl}}/quotes.html" >Quotes</a></li>
 			</ul>
