--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -85,3 +85,5 @@
 {% include recipe_template.html name="Vegetable Couscous" img="44" description="Couscous with some vegetables on top." %}
 
 {% include recipe_template.html name="Timbele de venere [venus rice]" img="45" description="Black rice with vegetables slowly cooked in the oven with added peas for a soft taste. Probably one of my favorite recipe so far." %}
+
+{% include recipe_template.html name="Homemade Bread" img="46" description="Nothing special" %}
