--- a/_includes/projects_presentations.html
+++ b/_includes/projects_presentations.html
@@ -1,8 +1,16 @@
 <h2>Presentations</h2>
 <hr/>
 <div class="email">
+	<a href="http://psychology.wtf">Dynamic Evolutionary Psychology</a>
+	Simplistic and abbreviated researches on evolutionary psychology correlations
+</div>
+<div class="email">
 	<a href="http://podcast.nixers.net/what">Nixers Podcast</a>
 	A podcast about Unix
+</div>
+<div class="email">
+	<a href="http://nixers.net/newsletter">Nixers Newsletter</a>
+	The nixers.net newsletter
 </div>
 <div class="email">
 	<a href="http://venam.nixers.net/presentation/">Internship</a>
