--- a/_includes/about_contact.html
+++ b/_includes/about_contact.html
@@ -1,10 +1,13 @@
 <h2>Contact</h2>
 <hr/>
 <div class="email">
-	<a href="mailto: patrick at iotek . org">patrick at iotek . org</a> PGP: C99E 0E69 008E 88F4 4529  1D87 8595 438B 27D1 0933 <a href="/pubkey.txt">key</a>
+	<a href="mailto: patrick at psychology . wtf">patrick at psychology . wtf</a> <br/>PGP: D11B08714807C8ECC6D726A70A8BF93F538C4BD6<a href="/psychology_wtf.pub">key</a>
 </div>
 <div class="email">
-	<a href="mailto: patrick.g.louis at net . usek.edu.lb">patrick.g.louis at net.usek.edu.lb</a> PGP: 7D46 4DAC A5A3 AD7F 58EE  3425 1547 F98B 2E7E 8F41 <a href="/pubkey2.txt">key</a>
+	<a href="mailto: patrick at iotek . org">patrick at iotek . org</a> <br/>PGP: C99E0E69008E88F445291D878595438B27D10933<a href="/pubkey.txt">key</a>
+</div>
+<div class="email">
+	<a href="mailto: patrick.g.louis at net . usek.edu.lb">patrick.g.louis at net.usek.edu.lb</a> <br/>PGP: 7D464DACA5A3AD7F58EE34251547F98B2E7E8F41<a href="/pubkey2.txt">key</a>
 </div>
 <div>
 	<span class="contact">irc.nixers.net</span> or <span class="contact">irc.iotek.org</span> or <span class="contact">unix.chat</span> <span class="contact colored">#nixers</span>
