--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,6 +5,9 @@
 	{% include about_contact.html %}
 </div>
 <div class="about_section">
+	{% include about_contribute.html %}
+</div>
+<div class="about_section">
 	{% include about_resume.html %}
 </div>
 <div class="about_section">
