--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
 				<li><a href="{{site.baseurl}}/others.html" >Poems</a></li>
 				<li><a href="{{site.baseurl}}/quotes.html" >Quotes</a></li>
 			</ul>
+			<a href="https://www.patreon.com/venam">Help me with a contribution</a>
 			<hr/>
 			<p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
 			<hr/>
