some changes + contributions

--- a/_includes/about_contribute.html
+++ b/_includes/about_contribute.html
@@ -3,4 +3,9 @@
 <div class="email">
 	<a href="https://www.patreon.com/venam">Patreon page</a>
 </div>
+<div class="email">
+	Hit me up by email if you want to contribute directly through a payoneer payment.
+	<br/>
+	I'll generate a link using the <a href='http://blog.payoneer.com/how-to-request-a-payment-with-payoneer/'>following procedure</a>
+</div>
 <hr/>
