--- a/_includes/about_profiles.html
+++ b/_includes/about_profiles.html
@@ -1,6 +1,9 @@
 <h2>Profiles &amp; Affiliations</h2>
 <hr/>
 <div class="email">
+	<a href="/old">Old website version</a>
+</div>
+<div class="email">
 	<a href="http://nixers.net/member.php?action=profile&uid=80">Nixers</a> (administrator)
 </div>
 <div class="email">
