--- a/_includes/art_head.html
+++ b/_includes/art_head.html
@@ -5,6 +5,19 @@
 		content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<title>Venam's Arts</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+	<meta name="keywords" content="venam art deliberate psychology philosophy unix blog" />
+
+    <meta property="og:title" content="venam's art"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:image" content="https://venam.nixers.net/blog/assets/arts/art82.jpg"/>
+    <meta property="og:description" content="{{ site.description }}"/>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="venam's art">
+    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:image" content="https://venam.nixers.net/blog/assets/arts/art82.jpg">
+
 	<link rel="shortcut icon" href="{{site.baseurl}}/assets/favicon.ico">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
