--- a/_includes/scrot_head.html
+++ b/_includes/scrot_head.html
@@ -9,6 +9,17 @@
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
+	<meta name="keywords" content="venam screenshot desktop window manager deliberate psychology philosophy unix blog" />
+    <meta property="og:title" content="venam's screenshots"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:image" content="https://venam.nixers.net/blog/assets/scrots/17.png"/>
+    <meta property="og:description" content="{{ site.description }}"/>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="venam's screenshots">
+    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:image" content="https://venam.nixers.net/blog/assets/scrots/17.png">
+
+
 	<style>
 
 body {
