--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,16 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	<meta name="keywords" content="venam deliberate psychology philosophy unix blog" />
+
+    <meta property="og:title" content="venam's blog"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:image" content="https://venam.nixers.net/blog/assets/world.png"/>
+    <meta property="og:description" content="{{ site.description }}"/>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="venam's blog">
+    <meta name="twitter:description" content="{{ site.description }}">
+    <meta name="twitter:image" content="https://venam.nixers.net/blog/assets/world.png">
+
 	<link rel="shortcut icon" href="{{site.baseurl}}/assets/favicon.ico">
 
 
