--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -87,3 +87,5 @@
 {% include recipe_template.html name="Timbele de venere [venus rice]" img="45" description="Black rice with vegetables slowly cooked in the oven with added peas for a soft taste. Probably one of my favorite recipe so far." %}
 
 {% include recipe_template.html name="Homemade Bread" img="46" description="Nothing special" %}
+
+{% include recipe_template.html name="Homemade Japanese Noodles" img="47" description="Japanese noodles with bamboo sprouts, shiitake, and bean sprouts" %}
