--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -89,3 +89,6 @@
 {% include recipe_template.html name="Homemade Bread" img="46" description="Nothing special" %}
 
 {% include recipe_template.html name="Homemade Japanese Noodles" img="47" description="Japanese noodles with bamboo sprouts, shiitake, and bean sprouts" %}
+
+
+{% include recipe_template.html name="Homemade Vegie Sushi" img="48" description="My gf made those for me, she's wonderful." %}
