updated comment section

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,16 @@
+
+<br/>
+<hr/>
+<br/>
+<p>
+If you want to have a more in depth discussion I'm always available by <a href="about.html">email or irc</a>.
+We can discuss and argue about what you like and dislike, about new ideas to consider, opinions, etc..<br/>
+If you don't feel like "having a discussion" or are intimidated by emails
+then you can simply say something small in the comment sections below
+and/or share it with your friends.
+</p>
+<br/>
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 /* * * CONFIGURATION VARIABLES * * */
