--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 <hr/>
 <br/>
 <p>
-If you want to have a more in depth discussion I'm always available by <a href="about.html">email or irc</a>.
+If you want to have a more in depth discussion I'm always available by <a href="{{site.baseurl}}/about.html">email or irc</a>.
 We can discuss and argue about what you like and dislike, about new ideas to consider, opinions, etc..<br/>
 If you don't feel like "having a discussion" or are intimidated by emails
 then you can simply say something small in the comment sections below
