--- a/_includes/all_quotes.html
+++ b/_includes/all_quotes.html
@@ -91,3 +91,22 @@
 {% include quote_template.html author='Colin Wrigth' quote= 'Enter with the intention of growing as an individual.' %}
 
 {% include quote_template.html author='Charles Dickens' quote= 'A Wonderful fact to reflect upon, that every human creature is constituted to be that profound secret and mystery to every other. A solemn consideration, when I enter a great city by night, that every one of those darkly clustered houses encloses its own secret; that every room in every one of them encloses its own secret; that every beating heart in the hundreds of thousands of breasts there, is, in some of its imaginings, a secret to the heart nearest it! Something of the awfulness, even of Death itself, is referable to this. No more can I turn the leaves of this dear book that I loved, and vainly hope in time to read it all. No more can I look into the depths of this unfathomable water, wherein, as momentary lights glanced into it, I have had glimpses of buried treasure and other things submerged.' %}
+
+
+{% include quote_template.html author='Massimo Bottura' quote='Sometimes I wonder if guests are present at the table when they are obsessing about photographing everything they eat, one time a guest suggested I change the colour of the plates (from white to black) because he said the photographs would look better.' %}
+
+
+{% include quote_template.html author='-' quote='If you\'re dreaming or complaining, it\'s the same shit. It means you\'re just not doing shit.' %}
+
+{% include quote_template.html author='George Box' quote='All models are wrong, some models are useful. Try to look at where the models converge. That\'s where I find the truth.' %}
+
+{% include quote_template.html author='Seb Paquet' quote='any sufficiently advanced kind of work is indistinguishable from play.' %}
+
+{% include quote_template.html author='-' quote='You are not your ideas' %}
+
+{% include quote_template.html author='A random guy on youtube' quote='Someone that cannot respect another\'s journey hasn\'t traveled very far himself.' %}
+
+{% include quote_template.html author='John Lubbock' quote='What we see depends mainly on what we look for.' %}
+
+{% include quote_template.html author='-' quote='Show me how you spend your day and I\'ll tell you what you care about.' %}
+
