--- a/_includes/projects_all.html
+++ b/_includes/projects_all.html
@@ -3,7 +3,7 @@
 <div id="my-github-projects">
 </div>
 
-<script src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.2.min.js" type="text/javascript"></script>
+<script src="./jquery-1.4.2.min.js" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/git.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$(function() {
