--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -92,3 +92,5 @@
 
 
 {% include recipe_template.html name="Homemade Vegie Sushi" img="48" description="My gf made those for me, she's wonderful." %}
+
+{% include recipe_template.html name="Ravioletti with red sauce" img="49" description="A superb meal" %}
