update to articles, deletions, filter by topic

--- a/css/new.css
+++ b/css/new.css
@@ -84,6 +84,7 @@ article {
 	font-size: 1.4em;
 	color: #404040;
 	font-family: "Raleway", sans-serif;
+	text-rendering: optimizeLegibility;
 }
 
 .email {
