--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -11,17 +11,21 @@ and/or share it with your friends.
 </p>
 <br/>
 
-<div id="disqus_thread"></div>
-<script type="text/javascript">
-/* * * CONFIGURATION VARIABLES * * */
-var disqus_shortname = 'venamsblog';
+<script async data-isso="/comments/"
+              data-isso-css="true"
+              data-isso-lang="en"
+              data-isso-reply-to-self="false"
+              data-isso-require-author="false"
+              data-isso-require-email="false"
+              data-isso-max-comments-top="10"
+              data-isso-max-comments-nested="5"
+              data-isso-reveal-on-click="5"
+              data-isso-avatar="true"
+              data-isso-avatar-bg="#f0f0f0"
+              data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
+              data-isso-vote="true"
+              data-vote-levels=""
+              src="//venam.nixers.net/comments/js/embed.min.js"></script>
 
-/* * * DON'T EDIT BELOW THIS LINE * * */
-(function() {
-	var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-	(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+<section id="isso-thread"></section>
 
