--- a/css/new.css
+++ b/css/new.css
@@ -11,13 +11,18 @@
 	src:url("../assets/fonts/DejaVuSans.ttf") format("truetype");
 }
 
-/* latin */
+/* raleway-300 - latin */
 @font-face {
-	font-family: 'Raleway';
-	font-style: normal;
-	font-weight: 300;
-	src: local('Raleway Light'), local('Raleway-Light'), url(https://fonts.gstatic.com/s/raleway/v9/-_Ctzj9b56b8RgXW8FArifk_vArhqVIZ0nv9q090hN8.woff2) format('woff2');
-	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../assets/fonts/raleway-v12-latin-300.eot'); /* IE9 Compat Modes */
+  src: local('Raleway Light'), local('Raleway-Light'),
+       url('../assets/fonts/raleway-v12-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../assets/fonts/raleway-v12-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../assets/fonts/raleway-v12-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('../assets/fonts/raleway-v12-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../assets/fonts/raleway-v12-latin-300.svg#Raleway') format('svg'); /* Legacy iOS */
 }
 
 body {
@@ -85,6 +90,7 @@ article {
 	color: #404040;
 	font-family: "Raleway", sans-serif;
 	text-rendering: optimizeLegibility;
+	text-align:justify;
 }
 
 .email {
