Update vypr's name/link.

--- a/_includes/about_friends.html
+++ b/_includes/about_friends.html
@@ -13,7 +13,7 @@
 <a href="http://saveosx.org/">yrmt</a>
 </div>
 <div class="email friends">
-<a href="http://elliottpardee.me/">vypr</a>
+<a href="http://srp.life/">srp</a>
 </div>
 <div class="email friends">
 <a href="http://www.tech-thoughts-blog.com/">rahmu</a>
